--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,13 +5,146 @@
     background-color: #151515;
 }
 
+/* 
+font-family: 'Poppins', sans-serif;
+font-family: 'young serif', serif;
+*/
+
 header {
-    color:#fff;
+    color: #fff;
     text-align: center;
     margin: 30px 0;
+    font-family: 'young serif', serif;
 }
 
 nav i {
     color: #fcfcfc;
     margin: 30px 20px;
+}
+
+.section-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 0;
+    text-align: center;
+    color: #fcfcfc;
+    font-family: 'Poppins', sans-serif;
+    padding: 0 20px;
+}
+
+.section-about div {
+    flex: 1;
+}
+
+.section-about h3 {
+    font-size: 28px;
+}
+
+.section-about h2 {
+    font-size: 28px;
+    margin: 0 0 20px;
+}
+
+.section-about h2 span,
+.Linguagens-box h2 span,
+.projects h2 span,
+.cta-contact {
+    border-bottom: 5px solid #5fdde5;
+}
+
+.section-about p {
+    margin: 15px 0;
+}
+
+.cta-contact {
+    color: #ffffff;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 15px;
+}
+
+hr {
+    margin: 50px 20px;
+}
+
+.Linguagens-box {
+    color: #fff;
+    text-align: left;
+}
+
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    margin: 20px 0;
+}
+
+.box i {
+    margin: 14px 10px;
+    text-align: left;
+}
+
+.Linguagens-box h2 {
+    font-size: 28px;
+    text-transform: uppercase; 
+    margin: 0 5px 40px;
+}
+
+.box-text h3 {
+    font-size: 28px;
+}
+
+.box-text p {
+    font-size: 20px;
+    margin: 8px 0;
+    color: #b2b2b2;
+}
+
+.projects, 
+.box-projects-links {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 20px 40px;
+    align-items: center;
+}
+
+.projects h2 {
+    color: #fff;
+    font-size: 28px;
+    text-transform: uppercase; 
+}
+
+.box-projects img{
+    width: 90%;
+    height: auto;
+    margin: 0 20px;
+    order: 1;
+}
+
+.box-projects-text{
+    text-align: left;
+    margin: 20px 20px 40px;
+}
+
+.box-projects-text h4{
+    color: #fff;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.box-projects-text span {
+    color: #c5c5c5;
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    img {
+        width: 70%;
+        height: auto;
+        order: -1;
+        margin: 0 0 20px;
+    }
 }
